package enums;

public enum PaymentStatus {
    PENDING, COMPLETED, DECLINED
}
